; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_cliSwitchProto.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_cliSwitchProto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i64 }

@config = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@REDIS_OK = common dso_local global i32 0, align 4
@context = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"HELLO 3\00", align 1
@REDIS_REPLY_ERROR = common dso_local global i64 0, align 8
@REDIS_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cliSwitchProto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cliSwitchProto() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @config, i32 0, i32 0), align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @REDIS_OK, align 4
  store i32 %7, i32* %1, align 4
  br label %28

8:                                                ; preds = %0
  %9 = load i32, i32* @context, align 4
  %10 = call %struct.TYPE_5__* @redisCommand(i32 %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %2, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = icmp ne %struct.TYPE_5__* %11, null
  br i1 %12, label %13, label %26

13:                                               ; preds = %8
  %14 = load i32, i32* @REDIS_OK, align 4
  store i32 %14, i32* %3, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @REDIS_REPLY_ERROR, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %13
  %21 = load i32, i32* @REDIS_ERR, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %20, %13
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %24 = call i32 @freeReplyObject(%struct.TYPE_5__* %23)
  %25 = load i32, i32* %3, align 4
  store i32 %25, i32* %1, align 4
  br label %28

26:                                               ; preds = %8
  %27 = load i32, i32* @REDIS_ERR, align 4
  store i32 %27, i32* %1, align 4
  br label %28

28:                                               ; preds = %26, %22, %6
  %29 = load i32, i32* %1, align 4
  ret i32 %29
}

declare dso_local %struct.TYPE_5__* @redisCommand(i32, i8*) #1

declare dso_local i32 @freeReplyObject(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
